@startuml
class BinaryNumber {
  + parseToDecimalNumber(): double
}
class Calculator {
  + divide(Number, Number): String
  + sum(Number, Number): String
  + subtract(Number, Number): String
  + multiply(Number, Number): String
  + verifyNonZeroDivision(Number): boolean
}
class ComplexNumber {
  - realPart: double
  - imaginaryPart: double
  + parseToDecimalNumber(): double
}
class DecimalNumber {
  + parseToDecimalNumber(): double
}
class HexaDecimalNumber {
  + parseToDecimalNumber(): double
}
class Number {
  - number: String
  + toString(): String
  + parseToDecimalNumber(): double
}
class OctalNumber {
  + parseToDecimalNumber(): double
}
class RomanNumber {
  + parseToDecimalNumber(): double
}

Calculator -u-> Number

BinaryNumber       -d-|>  Number
DecimalNumber      -d-|>  Number
HexaDecimalNumber  -d-|>  Number
OctalNumber        -d-|>  Number
RomanNumber        -r-|>  Number
ComplexNumber      -l-|>  Number
@enduml
